--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<h1 class="tituloprincipal">Universidad Cristiana Evangelica Nuevo Milenio</h1>
+<h1 class="tituloprincipal">Que día es hoy?</h1>
 <img class="img" src="logouniversidad2.png" /width=40%/>
 <a href="https://web.ucenm.net/"2 style="color: #000000;"> Visita la pagina de la universidad </a> 
 <p class="texto4">MISIÓN</p>
