--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <h1 class="tituloprincipal">Universidad Cristiana Evangelica Nuevo Milenio</h1>
 <img class="img" src="logouniversidad2.png" /width=40%/>
-<a href="https://web.ucenm.net/"2 style="color: #000000;"> Visita la pagina de la universidad </a> 
+<a href="https://web.ucenm.net/"2 style="color: #000000;"cursor: pointer"> Visitar la pagina de la universidad </a> 
 <p class="texto4">MISIÓN</p>
 <p class="texto">UCENM es una institución de educación superior dedicada a la formación de profesionales y técnicos, con compromiso de innovación y transformación social, basados en principios y valores cristianos, que contribuyan  al desarrollo integral, mediante la docencia, investigación y vinculación nacional e internacional, con el uso de tecnologías de última  generación y la participación de talento humano de excelencia.</p>
 <br>
