--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/a1BK2J-L35w?si=Wa3hkIs6_1BaHAdK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h2 class="texto3">SÍGUENOS EN NUESTRAS REDES SOCIALES</h2>
 <div style="text-align: center;">
-<a href="https://www.facebook.com" style="text-decoration: underline; color: #000000; cursor: pointer;">Facebook</a>
+<a href="https://www.facebook.com/share/19JSxJ7wfJ/?mibextid=wwXIfr" style="text-decoration: underline; color: #000000; cursor: pointer;">Facebook</a>
 <br>
-<a href="https://www.instagram.com/" style="text-decoration: underline; color: #000000; cursor: pointer;">Instagram</a> 
+<a href="https://www.instagram.com/ucenm_hn?igsh=MXY3MW51dmN0czV6Yw==" style="text-decoration: underline; color: #000000; cursor: pointer;">Instagram</a> 
 <br>
-<a href="https://www.tiktok.com/es-419/" style="text-decoration: underline; color: #000000; cursor: pointer">TikTok</a>
+<a href="https://www.tiktok.com/@ucenm_hn?_r=1&_d=eifmjja36e9ff3&sec_uid=MS4wLjABAAAAxPiSlswxdF3B11NEkKDuirn7XfPQIPuKjjcPHxXfyv-smo45JqUXRSze8UlclZT-&share_author_id=7203017447070073861&sharer_language=es&source=h5_m&u_code=e0gj5l34e43i2k&ug_btm=b6880,b5836&sec_user_id=MS4wLjABAAAA0lyZQ8Vt1InUxmsKpfthZdaXo8_JAHfIWzuJaSXq769HWnYAUoC5hLw1hJYY4tR8&utm_source=copy&social_share_type=5&utm_campaign=client_share&utm_medium=ios&tt_from=copy&user_id=7072551788142117893&enable_checksum=1&share_link_id=9D052AD0-EE31-4160-8BDD-06E59FF66374&share_app_id=1233" style="text-decoration: underline; color: #000000; cursor: pointer">TikTok</a>
 </div>
 <br>
 <br>
