--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #FF4500, #FF8C00); /* Degradado naranja */
+      background: linear-gradient(180deg, #0d3b66, #3d85c6); /* Degradado */
       color: white; /* Texto blanco para que resalte */
       text-align: center;
     }
