--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(180deg, #0d3b66, #3d85c6); /* Degradado */
+      background: 
+  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+  linear-gradient(135deg, #1abc9c, #3498db);
       color: white; /* Texto blanco para que resalte */
       text-align: center;
     }
