--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: 
-  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-  linear-gradient(135deg, #1abc9c, #3498db);
+     background: linear-gradient(135deg, #002147, #0a3d62);
       color: white; /* Texto blanco para que resalte */
       text-align: center;
     }
