--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
      background: linear-gradient(135deg, #002147, #0a3d62);
-      color: white; /* Texto blanco para que resalte */
+      color: white; /* Texto resalte */
       text-align: center;
     }
     a {
