--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-     background: linear-gradient(135deg, #002147, #0a3d62);
+     background: linear-gradient(135deg,  #005aab, #74b9ff);
       color: white; /* Texto resalte */
       text-align: center;
     }
