--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-     background: linear-gradient(135deg,  #005aab, #74b9ff);
+    background: 
+  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+  linear-gradient(135deg, #002147, #3498db);
       color: white; /* Texto resalte */
       text-align: center;
     }
