--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-    background: 
-  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-  linear-gradient(135deg, #002147, #3498db);
+    background: linear-gradient(135deg, #002147, #2980b9);
       color: white; /* Texto resalte */
       text-align: center;
     }
