--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #002147, #2980b9);
-      color: white; /* Texto resalte */
+      color: #FFFFFF; /* Texto resalte */
       text-align: center;
     }
     a {
