--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #002147, #2980b9);
-      color: #FFFFFF; /* Texto resalte */
+    background: linear-gradient(135deg, #74b9ff, #ffffff);
+      color: #ffffff; /* Texto resalte */
       text-align: center;
     }
     a {
