--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       text-decoration: underline;
     }
   </style>
+ <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 
 <body>
